force-app/main/default/objects/Account/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account not approved</fullName>
                <default>true</default>
                <label>Account not approved</label>
            </value>
            <value>
                <fullName>Account in review</fullName>
            </value>
            <value>
                <fullName>Account approved</fullName>
            </value>
            <value>
                <fullName>Account rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>