force-app/main/default/objects/Account/fields/Approved_for_Quoting_Order__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Quoting_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Quoting / Order</label>
    <type>Checkbox</type>
</CustomField>