force-app/main/default/objects/Account/fields/CoC_number_nx__c.field-meta.xml
<CustomField>
    <fullName>CoC_number_nx__c</fullName>
    <label>CoC number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>