force-app/main/default/objects/Account/fields/Customer_status_EOL__c.field-meta.xml
<CustomField>
    <fullName>Customer_status_EOL__c</fullName>
    <label>Customer status (EOL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Suspect</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>