force-app/main/default/objects/Account/fields/Discount_OEM__c.field-meta.xml
<CustomField>
    <fullName>Discount_OEM__c</fullName>
    <label>Discount OEM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>