force-app/main/default/objects/Account/fields/Has_own_pilot__c.field-meta.xml
<CustomField>
    <fullName>Has_own_pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag this checkbox to indicate whether the account has an own pilot</description>
    <label>Has own pilot?</label>
    <type>Checkbox</type>
</CustomField>