force-app/main/default/objects/Account/fields/Invoice_Email_CC_x__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_CC_x__c</fullName>
    <formula>Invoice_Contact__r.Email_CC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Email CC:</label>
    <type>Text</type>
</CustomField>