force-app/main/default/objects/Account/fields/Invoice_Email_x__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_x__c</fullName>
    <formula>Invoice_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Email</label>
    <type>Text</type>
</CustomField>