force-app/main/default/objects/Account/fields/Invoice_First_Name_x__c.field-meta.xml
<CustomField>
    <fullName>Invoice_First_Name_x__c</fullName>
    <formula>Invoice_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - First Name</label>
    <type>Text</type>
</CustomField>