force-app/main/default/objects/Account/fields/Invoice_Last_Name_x__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Last_Name_x__c</fullName>
    <formula>Invoice_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Last Name</label>
    <type>Text</type>
</CustomField>