force-app/main/default/objects/Account/fields/Invoice_Notes_Internal_x__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notes_Internal_x__c</fullName>
    <formula>Invoice_Contact__r.Notes_Internal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Notes Internal</label>
    <type>Text</type>
</CustomField>