force-app/main/default/objects/Account/fields/NX_Region__c.field-meta.xml
<CustomField>
    <fullName>NX_Region__c</fullName>
    <label>NX Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NX_Region</valueSetName>
    </valueSet>
</CustomField>