force-app/main/default/objects/Account/fields/TEST_ACCOUNT_HIERARCHY__c.field-meta.xml
<CustomField>
    <fullName>TEST_ACCOUNT_HIERARCHY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEST ACCOUNT HIERARCHY</label>
    <type>Checkbox</type>
</CustomField>