force-app/main/default/objects/Account/fields/Top_Level_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Parent_Account__c</fullName>
    <formula>IF(LEN(Parent.Name) &lt; 1, Id, 
 IF(LEN(Parent.Parent.Name) &lt;1,Parent.Id, 
IF(LEN(Parent.Parent.Parent.Name) &lt; 1,Parent.Parent.Id, 
 IF(LEN(Parent.Parent.Parent.Parent.Name) &lt; 1,Parent.Parent.Parent.Id,
 IF(LEN(Parent.Parent.Parent.Parent.Parent.Name) &lt; 1, HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;), 
 IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;), 
 IF(LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;), 
 IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;), 
 IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;),
 IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;), &quot;Ultimate Parent Beyond 10 Levels&quot;))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Level Parent Account</label>
    <type>Text</type>
</CustomField>