force-app/main/default/objects/Account/fields/UltimateParent__c.field-meta.xml
<CustomField>
    <fullName>UltimateParent__c</fullName>
    <description>SEARCH FOR ULTIMATE PARENT</description>
    <formula>BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Name, 
BLANKVALUE(Parent.Name, 
Name)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UltimateParent</label>
    <type>Text</type>
</CustomField>