force-app/main/default/objects/Account/fields/VAT_number__c.field-meta.xml
<CustomField>
    <fullName>VAT_number__c</fullName>
    <label>Your VAT number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>