force-app/main/default/objects/Account/validationRules/Billing_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Country_Mandatory</fullName>
    <active>true</active>
    <description>The billing country from the account record is mapped with &quot;Ordered by&quot; data on the Sales Order in Exact Online.</description>
    <errorConditionFormula>NOT(ISNEW())&amp;&amp;
ISBLANK(TEXT(BillingCountryCode))</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Fill in &quot;Billing Country&quot; in the address information section.</errorMessage>
</ValidationRule>