force-app/main/default/objects/Account/validationRules/Invalid_VAT_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_VAT_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( REGEX( VAT_number__c , &quot;NL[0-9]{9}B[0-9]{2}&quot;)),
NOT(ISBLANK(VAT_number__c)))</errorConditionFormula>
    <errorDisplayField>VAT_number__c</errorDisplayField>
    <errorMessage>Please provide the VAT Number in the following format: NL000000000B00</errorMessage>
</ValidationRule>