force-app/main/default/objects/Account/validationRules/Only_discount_OEM_when_OEM.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_discount_OEM_when_OEM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Account_Type__c,&quot;OEM/EPC&quot;)),
NOT(ISBLANK( Discount_OEM__c))
)</errorConditionFormula>
    <errorMessage>You cannot fill in OEM Discount when it is not an Account Type &apos;OEM/EPC&apos;</errorMessage>
</ValidationRule>